chatbot podcast trying

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,14 @@ authors = ["motiram <moti@playai.network>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = ">=3.11,<3.13"
 transformers = "^4.45.2"
 faiss-cpu = "^1.9.0"
 datasets = "^3.0.1"
 torch = "^2.5.0"
 pytest = "^8.3.3"
+feedparser = "^6.0.11"
+unstructured = "^0.16.0"
 
 
 [build-system]
