--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,15 @@ torch = "^2.5.0"
 pytest = "^8.3.3"
 feedparser = "^6.0.11"
 unstructured = "^0.16.0"
+python-dotenv = "^1.0.1"
+ipykernel = "^6.29.5"
+llama-index = "^0.11.19"
+llama-index-llms-ollama = "^0.3.4"
+llama-index-embeddings-ollama = "^0.3.1"
 
+
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.29.5"
 
 [build-system]
 requires = ["poetry-core"]
