--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ ipykernel = "^6.29.5"
 llama-index = "^0.11.19"
 llama-index-llms-ollama = "^0.3.4"
 llama-index-embeddings-ollama = "^0.3.1"
+sqlite-utils = "^3.37"
 
 
 [tool.poetry.group.dev.dependencies]
