--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,10 @@ llama-index = "^0.11.19"
 llama-index-llms-ollama = "^0.3.4"
 llama-index-embeddings-ollama = "^0.3.1"
 sqlite-utils = "^3.37"
+llama-index-readers-file = "^0.2.2"
+llama-index-embeddings-openai = "^0.2.5"
+llama-index-agent-openai = "^0.3.4"
+llama-index-llms-openai = "^0.2.16"
 
 
 [tool.poetry.group.dev.dependencies]
