--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ llama-index-readers-file = "^0.2.2"
 llama-index-embeddings-openai = "^0.2.5"
 llama-index-agent-openai = "^0.3.4"
 llama-index-llms-openai = "^0.2.16"
+openpyxl = "^3.1.5"
 
 
 [tool.poetry.group.dev.dependencies]
