--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,8 @@ llama-index-embeddings-openai = "^0.2.5"
 llama-index-agent-openai = "^0.3.4"
 llama-index-llms-openai = "^0.2.16"
 openpyxl = "^3.1.5"
+langchain = "0.1.20"
+langchainhub = "^0.1.21"
 
 
 [tool.poetry.group.dev.dependencies]
